<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimen_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/follow_your_favorite"
            android:textColor="@color/main_black"
            android:textSize="@dimen/dimen_text_size_26" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivHomeCollection1"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/ivHomeCollection2"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:layout_marginStart="@dimen/dimen_40"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_launcher_background" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivHomeCollection3"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/ivHomeCollection4"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:layout_marginStart="@dimen/dimen_40"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:src="@drawable/ic_launcher_background" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivHomeCollection5"
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_100"
            android:layout_marginTop="@dimen/dimen_16"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            tools:src="@drawable/ic_launcher_background" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvHomeCollectionExploreAll"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_corner_30"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@id/tvProfileFullName"
            app:layout_constraintStart_toStartOf="@id/tvProfileFullName"
            app:layout_constraintTop_toBottomOf="@id/ivProfileAvatar"
            app:strokeColor="@color/gray_light"
            app:strokeWidth="@dimen/dimen_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="@dimen/dimen_16"
                android:paddingVertical="@dimen/dimen_6"
                android:text="@string/discover_collections"
                android:textColor="@color/main_black"
                android:textSize="@dimen/dimen_text_size_16" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</layout>
