<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivLoginTop"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/starry_night"
                    app:layout_constraintDimensionRatio="H, 16:9"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/vLoginLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/dimen_20"
                    app:layout_constraintBottom_toBottomOf="@id/ivLoginTop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_rectangle_white_bg_corner_top_16"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_20"
                    android:paddingVertical="@dimen/dimen_70"
                    app:layout_constraintTop_toBottomOf="@id/vLoginLine">

                    <EditText
                        android:id="@+id/etvLoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_56"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_rectangle_gray_bg_corner_30"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="@dimen/dimen_20"
                        android:textColor="@color/main_black"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/dimen_text_size_18" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_16">

                        <EditText
                            android:id="@+id/etvLoginPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_56"
                            android:layout_gravity="center"
                            android:background="@drawable/shape_rectangle_gray_bg_corner_30"
                            android:fontFamily="@font/roboto_regular"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingHorizontal="@dimen/dimen_20"
                            android:textColor="@color/main_black"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/dimen_text_size_18" />

                        <ImageView
                            android:id="@+id/ivLoginShowPassword"
                            android:layout_width="@dimen/dimen_24"
                            android:layout_height="@dimen/dimen_24"
                            android:layout_gravity="center_vertical|end"
                            android:layout_marginEnd="@dimen/dimen_20"
                            android:background="?android:attr/actionBarItemBackground"
                            android:src="@drawable/ic_show_password_gray" />

                    </FrameLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_56"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:elevation="0dp"
                        app:cardBackgroundColor="@color/dark_blue"
                        app:cardCornerRadius="@dimen/dimen_corner_30">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/sign_in"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dimen_text_size_18" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/tvLoginForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:background="?android:selectableItemBackground"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/forgot_password"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/dimen_text_size_16" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dimen_70"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/llLoginFacebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/dimen_24"
                                android:layout_height="@dimen/dimen_24"
                                android:src="@drawable/ic_facebook" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/dimen_8"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/sign_in"
                                android:textColor="@color/dark_blue"
                                android:textSize="@dimen/dimen_text_size_14" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llLoginGoogle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen_50"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/dimen_24"
                                android:layout_height="@dimen/dimen_24"
                                android:src="@drawable/ic_google" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/dimen_8"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/sign_in"
                                android:textColor="@color/dark_blue"
                                android:textSize="@dimen/dimen_text_size_14" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dimen_20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/dont_have_account"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/dimen_text_size_16" />

                        <TextView
                            android:id="@+id/tvLoginSignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen_8"
                            android:background="?android:selectableItemBackground"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/sign_up"
                            android:textColor="@color/dark_blue"
                            android:textSize="@dimen/dimen_text_size_16" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</layout>
