<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constIntroductionRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@drawable/intro_bg">

        <ImageView
            android:layout_width="match_parent"
...
            android:layout_marginHorizontal="@dimen/dimen_40"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vIntroductionCenterLine">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvIntroductionSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_56"
                android:layout_marginTop="@dimen/dimen_20"
                app:cardBackgroundColor="@color/dark_blue"
                app:cardCornerRadius="@dimen/dimen_corner_30">

...
